# grade_school_math

./: .gitignore  CMakeLists.txt  README.md
inc/: gsmath.h
src/: main.cc  mul.cc
